k8s/gw2e-lottery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gw2e-lottery
  namespace: gw2e-lottery
  labels:
    app: gw2e-lottery
spec:
  selector:
    matchLabels:
      app: gw2e-lottery
  template:
    metadata:
      labels:
        app: gw2e-lottery
    spec:
      containers:
      - name: gw2e-lottery
        image: gbaso/gw2e-lottery:1.1.3
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gw2e-lottery
  namespace: gw2e-lottery
spec:
  selector:
    app: gw2e-lottery
  ports:
  - port: 8080
    targetPort: 8080
