k8s/gw2e-lottery-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gw2e-lottery-ingress
  namespace: gw2e-lottery
  labels:
    app.kubernetes.io/name: gw2e-lottery
    app.kubernetes.io/component: gw2e-lottery-ingress
spec:
  rules:
  - host: gw2e-lottery.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gw2e-lottery
            port: 
              number: 8080
